--- a/styles.css
+++ b/styles.css
@@ -3,48 +3,107 @@
   margin: 0;
 }
 #app {
- background: #243e50;
+ background: #2C3339;
  text-align: center;
  font-family: Helvetica;
  height: 100%;
 }
+svg {
+  padding-top: 10px;
+}
+h2 {
+  color: #EBEDF3;
+}
 text {
   font-size: 11px;
+  fill: #EBEDF3;
 }
 .container {
-  margin-top: 20px;
+  margin: 30px 0;
 }
 .box {
   display: inline-block;
-  width: 18vw;
+  width: 14vw;
   padding: 5px;
+  box-sizing: border-box;
+  color: #EBEDF3;
 }
 .title, .name {
   cursor: pointer;
+  font-size: 11px;
 }
 .title{
-  background: salmon;
-  color: white;
+  background: #EBEDF3;
+  color: #29384C;
+  border: 1px solid #EBEDF3;
+  border-radius: 2px;
+  font-size: 14px;
+  transition: .3s all ease-in-out;
+  position: relative;
+  top: 0px;
+}
+.title:focus {
+  outline: 0;
+}
+.title-active {
+  /* background: #29384C; */
+  background: #2C3339;
+  color: #EBEDF3;
+}
+.title:hover{
+  box-shadow: 0px 0px 3px white;
+}
+.title:active {
+  top: 1px;
 }
 .bar {
-  transition: .5s all ease-in-out;
+  fill: #EBEDF3;
 }
 .vertBar {
-  fill: rgba(255, 179, 16, 0.9);
+  transition: .5s all ease-in-out;
 }
 .row {
-  margin-top: 5px;
-  margin-bottom: 5px;
-  border-bottom: 1px solid white;
+  margin: 0 auto;
+  width: 95vw;
+  border-right: 1px solid #EBEDF3;
+  border-left: 1px solid #EBEDF3;
+  border-bottom: 1px solid #EBEDF3;
+  padding: 10px 0;
+}
+.container .row:nth-child(2) {
+  border-top: 1px solid #EBEDF3;
+  margin-top: 10px;
 }
 button {
   cursor: pointer;
   padding: 5px;
-  border: 1px solid salmon;
-  background: salmon;
-  color: white;
+  background: #EBEDF3;
+  color: #29384C;
+  border: 1px solid #EBEDF3;
 }
 .text {
-  display: none;
-  fill: white;
+  opacity: 0;
+  fill: #EBEDF3;
+  transition: .3s opacity ease-in-out;
+}
+
+.graphButton {
+  width: 8vw;
+  height: 6vh;
+  border-radius: 0;
+}
+
+.tableButton {
+  font-size: 10px;
+  padding: 3px 0;
+
+}
+
+.box:nth-child(2) {
+  text-align:right;
+  font-size: 11px;
+}
+
+#marketCap {
+  text-align: center; 
 }
